Java8 Set init fix